[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-spot-analysis"
version = "1.0.3a"
description = "Write a python function to calculate your metric(s), and run it over all clusters in your data. Find the cuts of the data driving your metrics."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Philip Gundy", email="PhilipGundy@gmail.com" }]
dependencies = [
    "pandas >= 1.3.5",
    "numpy >= 1.21",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pgundy/hot_spot_analysis"
"Source" = "https://github.com/pgundy/hot_spot_analysis"
"Tracker" = "https://github.com/pgundy/hot_spot_analysis/issues"

[project.scripts]
hot_spot_analysis = "hot_spot_analysis.hot_spot_analysis:HotSpotAnalysis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hot_spot_analysis" = ["data/*.csv"]