[project]
name = "hot-spot-analysis"
version = "1.1.0"
description = "Write a python function to calculate your metric(s), and run it over all clusters in your data. Find the cuts of the data driving your metrics."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Philip Gundy", email="PhilipGundy@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "pandas >= 1.3.5",
    "numpy >= 1.21",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest>=8.2.2",
    "build>=1.2.1",
    "twine>=6.0.0"
]

[project.urls]
"Homepage" = "https://github.com/pgundy/hot_spot_analysis"
"Source" = "https://github.com/pgundy/hot_spot_analysis"
"Tracker" = "https://github.com/pgundy/hot_spot_analysis/issues"

[build-system]
requires = ["setuptools>=68.0.0,<70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hot_spot_analysis" = ["data/*.csv"]